<resources>
    <string name="app_name">triplan</string>
    <string name="app_name_upper">TRIPLAN</string>

    <string name="create_account_button_text">create new account</string>

    <string name="have_account_text">already have account</string>
    <string name="sign_up_button_text">create</string>
    <string name="sign_up_title_text">Welcome</string>
    <string name="sign_up_text_name_text">name:</string>
    <string name="sign_up_text_name_form_hint">please input your username</string>
    <string name="sign_up_text_email_text">email:</string>
    <string name="sign_up_text_email_form_hint">please input your email</string>
    <string name="sign_up_text_password_text">password:</string>
    <string name="sign_up_text_password_form_hint">please input your password</string>
    <string name="sign_up_text_age_text">age:</string>
    <string name="sign_up_text_gender_text">gender:</string>
    <string-array name="sign_up_text_gender_form_array_text">
        <item>gentle</item>
        <item>lady</item>
    </string-array>
    <string name="sign_up_text_nearest_station_text">nearest station:</string>
    <string name="sign_up_text_nearest_station_line">line</string>
    <string name="sign_up_text_nearest_station_station">station</string>

    <string name="main_bottom_navigation_item_title_home">home</string>
    <string name="main_bottom_navigation_item_title_suggest">suggest</string>
    <string name="main_bottom_navigation_item_title_now">now</string>
    <string name="main_bottom_navigation_item_title_community">community</string>
    <string name="main_bottom_navigation_item_title_setting">setting</string>

    <string name="sign_in_title_text">Welcome Back</string>
    <string name="sign_in_text_email_text">email:</string>
    <string name="sign_in_text_password_text">password:</string>
    <string name="sign_in_button_text">sign in</string>
    <string name="sign_in_text_email_form_hint">please input your email</string>
    <string name="sign_in_text_password_form_hint">please input your password</string>

    <string name="suggest_title_text">Suggest</string>
    <string name="suggest_text_purpose">目的</string>
    <string name="suggest_text_tag">海</string>
    <string name="suggest_text_budget">予算</string>
    <string name="suggest_text_time">時間</string>
    <string name="suggest_text_dollar">¥</string>
    <string name="suggest_text_tilde">~</string>
    <string name="suggest_button_propose">提案</string>
  
    <string name="top_fragment_title_text">Top</string>

    <string name="setting_fragment_title_text">Setting</string>
    <string-array name="setting_item_array_text">
        <item>ユーザ情報編集</item>
        <item>ご意見・ご要望</item>
        <item>不具合報告</item>
        <item>利用規約</item>
    </string-array>

    <string name="content_plan_suggest_button_text">このプランにする</string>

    <!-- ContentPlanDetailActivity -->
    <string name="content_plan_detail_name_text">○○リゾートホテル</string>
    <string name="content_plan_detail_description_text">aaaaaaaa</string>
    <string name="content_plan_detail_link_text">リンク</string>
    <string name="content_plan_detail_text_web_text"><a href='http://example.com'>http://example.com</a></string>
    <string name="content_plan_detail_text_inst_text"><a href='https://www.instagram.com/?hl=ja'>instagram</a></string>
    <string name="content_plan_detail_map_text">マップ</string>
    <string name="content_plan_detail_review_text">レビュー</string>
    <string name="content_plan_detail_map_address">静岡県○○市</string>
    <string name="content_plan_detail_review_value_num">5.0</string>

    <string-array name="review_comments">
        <item>あいうえお</item>
        <item>かきくけこ</item>
    </string-array>
    <string-array name="review_graph_numbers">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="review_graph_bar_values">
        <item>50</item>
        <item>40</item>
        <item>30</item>
        <item>20</item>
        <item>10</item>
    </string-array>
    <string-array name="review_graph_bar_widths">
        <item>50</item>
        <item>40</item>
        <item>30</item>
        <item>20</item>
        <item>10</item>
    </string-array>

    <!-- ContentPlanTrafficActivity -->
    <string-array name="content_plan_traffic_station_array_text">
        <item>JR東京駅</item>
        <item>JR熱海駅</item>
    </string-array>
    <string-array name="content_plan_traffic_detail_array_text">
        <item>X番線 XXX線</item>
        <item>Y番線 YYY線</item>
    </string-array>
</resources>
