<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_navigation_top"
        android:title="@string/main_bottom_navigation_item_title_home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/main_navigation_suggest"
        android:title="@string/main_bottom_navigation_item_title_suggest"
        android:icon="@drawable/ic_suggest" />

    <item
        android:id="@+id/main_navigation_now"
        android:title="@string/main_bottom_navigation_item_title_now"
        android:icon="@drawable/ic_now"
        />

    <item
        android:id="@+id/main_navigation_community"
        android:title="@string/main_bottom_navigation_item_title_community"
        android:icon="@drawable/ic_community" />

    <item
        android:id="@+id/main_navigation_setting"
        android:title="@string/main_bottom_navigation_item_title_setting"
        android:icon="@drawable/ic_setting" />
</menu>
