<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign_up.SignUpActivity">
    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title_text"
        android:textSize="@dimen/sign_up_title_text_size"
        android:textColor="@color/triplan_black"
        android:layout_marginStart="@dimen/sign_up_title_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_title_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/signUpTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_name_text"
        android:textColor="@color/triplan_black"
        android:textSize="@dimen/sign_up_text_text_size"
        android:layout_marginStart="@dimen/sign_up_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_text_name_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpTextNameForm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_up_text_height"
        android:inputType="text"
        android:textSize="@dimen/sign_up_text_form_text_size"
        android:hint="@string/sign_up_text_name_form_hint"
        android:layout_marginStart="@dimen/sign_up_text_form_margin_start"
        android:layout_marginEnd="@dimen/sign_up_text_form_margin_end"
        android:paddingStart="@dimen/sign_up_text_form_padding_start"
        android:paddingEnd="@dimen/sign_up_text_form_padding_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTextName" />

    <TextView
        android:id="@+id/signUpTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_email_text"
        android:textColor="@color/triplan_black"
        android:textSize="@dimen/sign_up_text_text_size"
        android:layout_marginStart="@dimen/sign_up_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextNameForm" />

    <EditText
        android:id="@+id/signUpTextEmailForm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_up_text_height"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/sign_up_text_form_text_size"
        android:hint="@string/sign_up_text_email_form_hint"
        android:layout_marginStart="@dimen/sign_up_text_form_margin_start"
        android:layout_marginEnd="@dimen/sign_up_text_form_margin_end"
        android:paddingStart="@dimen/sign_up_text_form_padding_start"
        android:paddingEnd="@dimen/sign_up_text_form_padding_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTextEmail" />

    <TextView
        android:id="@+id/signUpTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_password_text"
        android:textColor="@color/triplan_black"
        android:textSize="@dimen/sign_up_text_text_size"
        android:layout_marginStart="@dimen/sign_up_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextEmailForm" />

    <EditText
        android:id="@+id/signUpTextPasswordForm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_up_text_height"
        android:inputType="textPassword"
        android:textSize="@dimen/sign_up_text_form_text_size"
        android:hint="@string/sign_up_text_password_form_hint"
        android:layout_marginStart="@dimen/sign_up_text_form_margin_start"
        android:layout_marginEnd="@dimen/sign_up_text_form_margin_end"
        android:paddingStart="@dimen/sign_up_text_form_padding_start"
        android:paddingEnd="@dimen/sign_up_text_form_padding_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTextPassword" />

    <TextView
        android:id="@+id/signUpTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_age_text"
        android:textColor="@color/triplan_black"
        android:textSize="@dimen/sign_up_text_text_size"
        android:layout_marginStart="@dimen/sign_up_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextPasswordForm" />

    <EditText
        android:id="@+id/signUpTextAgeForm"
        android:layout_width="@dimen/sign_up_text_age_form_width"
        android:layout_height="@dimen/sign_up_text_height"
        android:inputType="numberDecimal"
        android:textSize="@dimen/sign_up_text_form_text_size"
        android:textAlignment="center"
        android:maxLength="2"
        android:layout_marginStart="@dimen/sign_up_text_age_form_margin_start"
        app:layout_constraintStart_toEndOf="@id/signUpTextAge"
        app:layout_constraintTop_toTopOf="@id/signUpTextAge"
        app:layout_constraintBottom_toBottomOf="@id/signUpTextAge"
        />

    <TextView
        android:id="@+id/signUpTextGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_gender_text"
        android:textColor="@color/triplan_black"
        android:textSize="@dimen/sign_up_text_text_size"
        android:layout_marginStart="@dimen/sign_up_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextPasswordForm" />

    <Spinner
        android:id="@+id/signUpSpinnerGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_up_sipnner_gender_margin_start"
        app:layout_constraintStart_toEndOf="@+id/signUpTextGender"
        app:layout_constraintTop_toTopOf="@id/signUpTextGender"
        app:layout_constraintBottom_toBottomOf="@id/signUpTextGender" />

    <TextView
        android:id="@+id/signUpTextNearestStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_nearest_station_text"
        android:textColor="@color/triplan_black"
        android:textSize="@dimen/sign_up_text_text_size"
        android:layout_marginStart="@dimen/sign_up_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextAgeForm" />

    <Spinner
        android:id="@+id/signUpSpinnerNearestStationLine"
        android:layout_width="@dimen/sign_up_spinner_nearest_station_line_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_spinner_nearest_station_line_margin_top"
        android:layout_marginStart="@dimen/sign_up_text_form_margin_start"
        android:layout_marginEnd="@dimen/sign_up_text_form_margin_end"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@id/signUpTextNearestStationLine"
        app:layout_constraintTop_toBottomOf="@id/signUpTextNearestStation" />

    <TextView
        android:id="@+id/signUpTextNearestStationLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_nearest_station_line"
        android:textSize="@dimen/sign_up_text_text_size"
        android:textColor="@color/triplan_black"
        android:layout_marginStart="@dimen/sign_up_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_spinner_nearest_station_line_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTextNearestStation" />

    <Spinner
        android:id="@+id/signUpSpinnerNearestStationStation"
        android:layout_width="@dimen/sign_up_spinner_nearest_station_station_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_spinner_nearest_station_line_margin_top"
        android:layout_marginStart="@dimen/sign_up_text_form_margin_start"
        android:layout_marginEnd="@dimen/sign_up_text_form_margin_end"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@id/signUpTextNearestStation"
        app:layout_constraintTop_toBottomOf="@id/signUpSpinnerNearestStationLine" />

    <TextView
        android:id="@+id/signUpTextNearestStationStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_nearest_station_station"
        android:textSize="@dimen/sign_up_text_text_size"
        android:textColor="@color/triplan_black"
        android:layout_marginStart="@dimen/sign_up_text_margin_start"
        android:layout_marginTop="@dimen/sign_up_spinner_nearest_station_line_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTextNearestStationLine" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_up_button_height"
        android:background="@drawable/selector_btn_triplan_blue"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/triplan_white"
        android:textSize="@dimen/sign_up_button_text_size"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
